# claPlusPlus

./: .clang-format  .clangd  .gitignore  README.md  chargen.cpp  meson.build
.github/workflows/: meson-test.yml
include/: Arg.hpp  Macros.hpp  Parsables.hpp  Parser.hpp  utils.hpp
include/arg/: Arg.hpp  BaseArg.hpp
src/: Arg.cpp  BaseArg.cpp  Parser.cpp  args.hpp  clapparser.hpp  example.cpp  main.cpp  utils.cpp
tests/: parse_types.cpp  test_combo.cpp  test_flag.cpp  test_priority.cpp  type_parse_expectedfail.cpp
